--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="login_welcome">Welcome to the Twitternator</string>
     <string name="characters_remaining">140</string>
     <string name="at_symbol">\@%s</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="followers">Followers: %d</string>
+    <string name="following">Following: %d</string>
 
 </resources>
